fix: rabbitmq conf

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,7 @@ REDIS_PORT=
 # Rate Limiter Configuration
 RATE_LIMIT_MAX=10
 RATE_LIMIT_WINDOW=60
+
+# RabbitMQ Configuration
+RABBITMQ_URI=
+RABBITMQ_QUEUE=
